--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get_storage: ^2.1.1
   fluttertoast: ^8.2.1
   flutter_svg: ^2.0.5
+  smart_alert_dialog: ^4.0.4
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
