--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,19 @@ dependencies:
   fluttertoast: ^8.2.1
   flutter_svg: ^2.0.5
   smart_alert_dialog: ^4.0.4
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
   flutter_test: 
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icLogo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
 
 flutter: 
   assets: 
